Add check license and switch to Jackson 3